tests/bad/typcheck5.tig
let function test(x: int, y:int) =
    if x = y then 3 else "4"
in test(3, 4)
end
